--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <head><title>Havi Technology</title></head>
 <body>
 <div align="center">
 <form method="post" action="" name="signin-form">
