--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-  <head><title>Havi Technology</title></head>
+<head><title>Havi Technology</title></head>
 <body>
+<h1>Havi Technology</h1>
+<a href="register.html" target="bottom"><font color="Black">
+                   register</font></a>
 <div align="center">
 <form method="post" action="" name="signin-form">
   <div class="form-element">
